--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@clerk/nextjs": "^4.29.3",
     "@clerk/themes": "^1.7.9",
+    "@formkit/auto-animate": "^0.8.2",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.2",
     "@lottiefiles/lottie-player": "^2.0.4",
