--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@react-email/components": "^0.0.16",
+    "@react-email/components": "^0.0.17",
+    "@react-email/render": "^0.0.13",
     "@react-three/drei": "^9.97.6",
     "@react-three/fiber": "^8.15.16",
     "@sentry/nextjs": "^7.99.0",
@@ -41,18 +42,21 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.161.2",
     "@uploadthing/react": "^6.1.0",
+    "add": "^2.0.6",
     "antd": "^5.16.2",
     "cjstoesm": "^2.1.2",
     "class-variance-authority": "^0.7.0",
     "cli-real-favicon": "^0.0.8",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
     "disqus-react": "^1.1.5",
     "embla-carousel-react": "^8.0.0-rc20",
+    "form": "^0.2.4",
     "framer-motion": "^11.0.5",
     "github-slugger": "^2.0.0",
     "global": "^4.4.0",
     "gray-matter": "^4.0.3",
+    "input": "^1.0.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.294.0",
     "marked": "^11.2.0",
@@ -67,10 +71,9 @@
     "query-string": "^8.1.0",
     "rc-tween-one": "^3.0.6",
     "react": "^18",
-    "react-datepicker": "^4.24.0",
     "react-dom": "^18",
-    "react-email": "^2.1.1",
-    "react-hook-form": "^7.49.0",
+    "react-email": "^2.1.2",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-lite-youtube-embed": "^2.4.0",
@@ -78,11 +81,12 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
     "resend": "^3.2.0",
+    "shadcn-ui": "^0.8.0",
     "stripe": "^14.8.0",
     "svg-url-loader": "^8.0.0",
     "svix": "^1.15.0",
     "swiper": "^11.0.5",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.161.0",
     "uploadthing": "^6.3.1",
